Make class library

--- a/amethyst.csproj
+++ b/amethyst.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <Platforms>x64</Platforms>
     <ApplicationIcon />
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <StartupObject />
     <Configurations>Debug</Configurations>
   </PropertyGroup>
