Move Keycodes to odl

--- a/amethyst.csproj
+++ b/amethyst.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\decodl\decodl.csproj" />
+    <ProjectReference Include="..\NativeLibraryLoader\NativeLibraryLoader.csproj" />
     <ProjectReference Include="..\odl\odl.csproj" />
   </ItemGroup>
 
